# latin

./: README.md  latin-project.cabal  latin.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
