name:                latin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/latin-project#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , sqlite
                     , optparse-applicative
                     , ansi-terminal
                     , MissingH
                     , directory
                     , filepath
  default-language:    Haskell2010

executable latin
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , latin
                     , optparse-applicative
                     , ansi-terminal
  default-language:    Haskell2010

